*gitlab-ce-8.16.6 (24 Feb 2017)

  24 Feb 2017; Manuel Friedli <manuel@fritteli.ch>
  +gitlab-ce-8.16.6.ebuild:
  www-apps/gitlab-ce: Added ebuild for gitlab-ce-8.16.6

*gitlab-ce-8.15.7 (16 Feb 2017)
*gitlab-ce-8.16.5 (16 Feb 2017)
*gitlab-ce-8.17.0_rc3 (16 Feb 2017)

  16 Feb 2017; Manuel Friedli <manuel@fritteli.ch>
  +files/03-gitlab-ce-8.17.0-database.yml.patch, +gitlab-ce-8.15.7.ebuild,
  +gitlab-ce-8.16.5.ebuild, +gitlab-ce-8.17.0_rc3.ebuild,
  -gitlab-ce-8.17.0_rc1.ebuild, gitlab-ce-9999.ebuild:
  www-apps/gitlab-ce:  Added ebuilds for the lates patch versions of the 8.15
  and 8.16 branch, and also for the lates release candidate of the 8.17 branch.

*gitlab-ce-8.16.4 (14 Feb 2017)
*gitlab-ce-8.17.0_rc1 (14 Feb 2017)

  14 Feb 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.16.4.ebuild,
  +gitlab-ce-8.17.0_rc1.ebuild, -gitlab-ce-8.14.5.ebuild,
  -gitlab-ce-8.16.0_rc2.ebuild, gitlab-ce-9999.ebuild:
  www-apps/gitlab-ce: added ebuild for gitlab-ce-8.16.4

*gitlab-ce-8.16.0_rc2 (16 Jan 2017)

  16 Jan 2017; Manuel Friedli <manuel@fritteli.ch>
  +files/05-gitlab-ce-8.16.0-replace-sys-filesystem.patch,
  +gitlab-ce-8.16.0_rc2.ebuild, -gitlab-ce-8.16.0_rc1.ebuild,
  gitlab-ce-9999.ebuild:
  www-apps/gitlab-ce: updated lates RC ebuild

*gitlab-ce-8.15.0_rc1 (16 Dec 2016)

  16 Dec 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.15.0_rc1.ebuild,
  -gitlab-ce-8.14.0_rc4.ebuild:
  www-apps/gitlab-ce:  added ebuild for latest release candidate (8.15.0_rc1).
  This is, as always, untested.

*gitlab-ce-8.14.5 (16 Dec 2016)

  16 Dec 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.14.5.ebuild:
  www-apps/gitlab-ce:  added ebuild for version 8.14.5, latest bugfix release

*gitlab-ce-8.14.4 (12 Dec 2016)

  12 Dec 2016; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.14.4.ebuild:
  www-apps/gitlab-ce:  added ebuild for gitlab-ce-8.14.4, latest bugfix release

*gitlab-ce-8.14.3 (08 Dec 2016)
