@@ -17,13 +17,15 @@ DIST gitlab-ce-8.15.7.tar.gz 20033447 SHA256 3989b21d5eae1ff2293f535b6645b6ba948
 DIST gitlab-ce-8.16.4.tar.gz 20899790 SHA256 0ee69f010f2306a6b1d7fda377a0780951560880c974f62b8ab15935ddd93930 SHA512 a81ed04326262569a4d0112476624efafebf8fad8296fd6866881bb280abc5e9f7275bbe94d6d5e8c40491d88422368349a34066206fb60dcef3578f9ab0ccd1 WHIRLPOOL f5d3d84bb0c5fedddc195326603911abec19c8d0de95e26ccdb1db10df195288e3ecf1ad6aa04e1a778b6987418466508f4080888fcfa1847825916141cc87eb
 DIST gitlab-ce-8.16.5.tar.gz 20900898 SHA256 74a73992d18d97b426ea36ca2c975f4d1d44d7e66602b2fa76a18b267e90bbe2 SHA512 cf77252542571104c74b9ad932812f9fc36dd31703ff653bf23933c7e2165cc9927482025d63ca1863af17634785c22be944a8ac17c27cc06924cf832ef0b591 WHIRLPOOL bb916c79a33158160754348ec8227c84303850a525781422a1fc718330cc34baad5efbb111165df0e0e14a6ee7f6c89c19c976708116b2fecb3e686f281330e9
 DIST gitlab-ce-8.16.6.tar.gz 20901900 SHA256 5b88dd855afc44da2b8f059056321fc0dd4cb7c2a97811c6c3ec65c3b44e1d8d SHA512 b6fdf4e8df787ea5812c9c6baf29cf86fcc440be7f1c8fd31410ccc93459208999f25956d8561d3a789ff75c6e112e396db79cd0fa3d959dd8b1b382ccb5d7b4 WHIRLPOOL 17b2203a1d1b36f814df781aaee1faafcf336794fa7c1792868685cb6ab4e7e7eb1de916b34fb28ba72be38d760187de48b8ac2b36bf4b722bf799f60e6b1c96
+DIST gitlab-ce-8.17.0.tar.gz 22991847 SHA256 3883c2e505e511f83072f950b9d211783148b97e29f34144e57c8b180d7f4518 SHA512 e0ee1b1ab21a6ad262cccbb2abf544ccb18dafcaf61e83aa02bac0182bdd35a47a725741382876f3bb79f6f42764c59b7a992c16a916a1673a716417b34d8a87 WHIRLPOOL fe3c36e41d0fe3c3420a3e52dc61fc30f424d2832cd82587a6e50b6c6450ee9e99bb2897f87cc949b4663055a35e159cf7b6f471b6aa9046c6bb8b1fae526ab7
 DIST gitlab-ce-8.17.0_rc3.tar.gz 23031572 SHA256 13ac75ce0737e9e9f46fea59828a0a71f3ad9fc4436859bc68938d4719190ba9 SHA512 c5998f7aeefd65ea46ee6357f15bc6e60253742f6007252bf9a1543f29f8973951f8d0f8d60dba87b08dbf5256427e9bf28198274a9dadb92b30b7f5adc76cd1 WHIRLPOOL 86380fedcacbd18f13b12f4792b506421726c4226512471eeeda8d085abc89e6b43f54b0301e0cbdb1f3afe6dade84452690576435220c0afc559bcd5f341df3
 EBUILD gitlab-ce-8.15.4.ebuild 11982 SHA256 db794f18bc0d023a8b6adf49b82c2e37fd38b7206b064a7700289c0cfa16961c SHA512 ca30780d28ffc0242ac5f6ccad178cc44464a81f2d44cb13e53ddf06700d0f39b9fee9b77e356735435079b34090049d50d9019af71e92d6d8faaf3767a39dc5 WHIRLPOOL 42ee8b8e5a2c6fba69ecdbf6e306a87f369fa193f721c73481edc744953bfd210cb4495bc603ba01566efb2b0869ec71284a1f1b1c34d1a124bd08546829ca37
 EBUILD gitlab-ce-8.15.7.ebuild 11982 SHA256 fab225a8a8a9373898b5c604ce41ed65c4648c46131798315df833326b006fb7 SHA512 ea17dc9927336aed09ba21e0e1c9c4df2998f941a05ff30e9ef9951b5318bcdfb1d332fa8d285a27f26356a9fa9a5f72da45882ab8edbfa6046ec96764dae47f WHIRLPOOL d51629d3c67f8be2636a2e5cb4bb4d4a7b0402394f47aaa01fc182c29f1d3ee916a2d5bb8086bbe871f41294e348ec024d81a775ba9c30028d8b97d93d637620
 EBUILD gitlab-ce-8.16.4.ebuild 11982 SHA256 91875777d0953bffddd31318d9c5d4666ba59bd3446804d063c1199c603bd5a6 SHA512 7112bf185f25d90a11ee2a6e9d197c1ce781b49c486cc1afaff002ad66dcec7c9b43c3b9b6c26c62d23bb7e8c0fdd4c527e53a99f9674bb4af1e404454960227 WHIRLPOOL 76bd66e8b7d4ff04f02354cb6cdf3fa0b92ccf2cdcad26cf117f12330b3f3588713fd0d0465da2515750348975eb81daa6e02f984025804b7db50da99f4e8e5e
 EBUILD gitlab-ce-8.16.5.ebuild 11982 SHA256 fd2648d0a2df06b5aa46435061f6d12b1d0d8b6958c2367b96c2f4a11dbf58f1 SHA512 de82deca3c9163959d6c4c2e41e57549506e49a6a1125d37fa7277e4ca00adb74a331dad4c103f8d1b2e80ebbe1511220c23aabc8889005dcc37684c5b3373c3 WHIRLPOOL 1f80a27148caf3b570df9b5c19849e453001ddc2fc78add1040c53cae249feafcb3a0343ad61d22135ba578f9d92137c048dad0f0744737ae326ac74bf08ce7d
 EBUILD gitlab-ce-8.16.6.ebuild 11982 SHA256 2cc7b8f06153f28ebcc34a5ff8e24be791689c41fc8a780149cdaeb61ffc70d3 SHA512 f9d43d16cac2edbcbc3d144133265b94bbb7dac8ed5266a7ba641cfa6f154eb62462ffff8a37b977559ca892eb20c968eb6f82c2aafbd20ce293f6a6bd7b7e29 WHIRLPOOL 5682849083932171dff509c2142e225992e2724b09987da47bab258fdf45eebaf615cb07739709da2c421eed6fc66f705d6ce35a8d956130598168908ee2f061
+EBUILD gitlab-ce-8.17.0.ebuild 12704 SHA256 c208252d0e745751dc0dd0dfcc7a6965260e6ebde5966114128f56c331b6b686 SHA512 b779e21712de35e935647ea79eee2ceac686e7494bd8d0fcd9135553c5422512b728e381199daab4cf5e8a9c3e069c3688b7a096df0fb49716b713b79f54034b WHIRLPOOL 0a1d89aa808a5320867fcf88b965346b86cc8e0cced3a4d2525028e29b70daf341e099a08507f214ee362f884e8d8ae91027b2708780d6d71ee3c94f92a5c912
 EBUILD gitlab-ce-8.17.0_rc3.ebuild 12258 SHA256 179da162a7ff3ab1fc9f3173aff30c59a73005622ccb0fe8ada57f950c9d0dd7 SHA512 b5f244a7a7ac980b1e1c1595b88613cf6f3649591a9430dac0db3a174432648b05707b0e3e79450f5882fb7044aca6bb3778a19566ad6c83c5fd30ee8c09893e WHIRLPOOL 49cfbbfedfcafecfa8a775bf0e3a8a9daa2fcce3a819ce92ab07ccaaa4b3881221cce5ebf4ec9333b9ed7a884717d037336dc644d359137e06fe5df3f51e9aaa
 EBUILD gitlab-ce-9999.ebuild 12019 SHA256 bd4fa8a1b3820a36f942139b1c8f74fe9f99b6525e83522e7882b9f010b39870 SHA512 b2a2c1d0df976fbd2892ad8a30d2a7cac3e5d5009be2e28e107d76a32b1de976e502b21b34a584284ae19cc48382250c584d237e8438fa510083457a3f370209 WHIRLPOOL 31dc6fc06c3c8959862ab0d4a91ac2bdd6acef026638e1817beb31a88102ce3acd954fc390d970dd403e3681833dc5a56834f4c7500612ee018bdb79fa3bd818
-MISC ChangeLog 13399 SHA256 783d7692bda4c868948426032652c8307ed5e8be0f9aaacb3a3267eefa643ccf SHA512 f85c270f51a765c33c5fdfdd10ddf3ebd4768bf34fdec6b12cdbd653c6e8ae75bc9383087cb50fc790eaf7999f90e4939d7496d5463452b31c99f0ab8e176632 WHIRLPOOL 265346111e9234ae8883e0cd19a0fa94afbf4a88d8668be344fde0655902c0f16cfbdd7fe221b5a397feeb425d9e8fde60ddf29e1369d00d959da985d6dc2b82
+MISC ChangeLog 13613 SHA256 01a00810dd63542c0089e4b60530f8d8852704b12d8c04d100b84d6f6618d290 SHA512 604bf625247f4b914d9835fd42f4f6fd4d3abe1a1be39d5286121b0514d61afc8b1d2669dec0342e907dea6cd4e5825d26eb9806b80c7e14691a421625763e21 WHIRLPOOL 0d84b35121fc1d2bfc0af5e2c2cfc9c81000f1924fec0c9add89c297d79e6f443f4b172b96b2e88088087f6336b5404d88fd01686bae45716ce0912d5eb06b3a
 MISC metadata.xml 559 SHA256 6c3f48d3ef57c97bf27790f33ee04bd8de8b01597caa8a2a7a473d6d0a3c5759 SHA512 5aa340b5429795d84cd106ee673fd55a42fd4b0d3299d6b95c6a3e3d50812a9620820a4de5c57d5048af0c3ecec7f575d5856d2f7fadc210aadcbdd4dd040fe1 WHIRLPOOL f3d7b8c0522e09f5156e6bb446bb74e4c75f5da4495ca2ece1eb78afce59307abe01bf3c5dd5344278fcac9e334300d912031c806f51b981591c01bc3588c6f3
