@@ -1,3 +1,9 @@
+*gitlab-ce-8.17.0 (24 Feb 2017)
+
+  24 Feb 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-8.17.0.ebuild:
+  www-apps/gitlab-ce:  added ebuild for gitlab-ce-8.17.0. This is the first
+  version to depend on npm
+
 *gitlab-ce-8.16.6 (24 Feb 2017)
 
   24 Feb 2017; Manuel Friedli <manuel@fritteli.ch>
